--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,11 +15,15 @@ h2 {
     padding: 20px;
 }
 
-h1, h2 {
-    text-align: center;
+h3 {
+    font-size: 20px;
+}
+
+h1, h2, h3 {
     color: black;
     margin-top: 0;
     margin-bottom: 0;
+    text-align: center;
 }
 
 .contactor-app {
@@ -29,10 +33,10 @@ h1, h2 {
 }
 
 .contacts-container {
+    padding: 5px;
     border: 2px solid black;
     border-radius: 5px;
     background-color: #f7f7f7;
-    padding: 5px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.75);
 }
 
@@ -41,9 +45,14 @@ h1, h2 {
     justify-items: center;
 }
 
-.contacts-name-input {
-    width: 50%;
+.input-field {
     padding: 4px;
+    border: 1px solid #AAAAAA;
+    border-radius: 3px;
+}
+
+#contacts-name-input {
+    width: 50%;
     border: 1px solid #AAAAAA;
     border-radius: 3px;
     font-size: 14px;
@@ -57,14 +66,61 @@ button {
     background-color: #38bc57;
     border: none;
     border-radius: 4px;
-    padding: 6px 10px;
     color: #fff;
+}
+
+#create-button {
     margin: 8px;
+    padding: 6px 10px;
 }
 
 .contacts-list {
-    border-top: black 2px solid;
-    padding-bottom: 3px;
+    border-top: grey 2px solid;
+    padding-top: 3px;
+}
+
+.contact-card {
+    margin-top: 5px;
+    padding: 5px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.card-info {
+    display: flex;
+    justify-content: space-between;
+}
+
+.red-button {
+    background-color: #FF3B40;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+}
+
+#card-name-input, #card-phone-input {
+    width: 100%;
+    margin-right: 5px;
+    font-size: 13px;
+}
+
+#add-button {
+    padding: 5px 10px;
+}
+
+hr {
+    margin: 5px 0px;
+}
+
+.card-table-input {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+table {
+    width: 100%;
+    border: 1px solid lightgrey;
 }
 
 .subtext {
